Add CSS reset and remove inactive note class

--- a/css/_base.sass
+++ b/css/_base.sass
@@ -10,6 +10,16 @@ body
   background-color: $bg
   font-family: 'Lato', 'Helvetica Neue'
   color: white
+  line-height: 1.3
+
+strong
+  font-weight: bold
+
+em
+  font-style: italic
+
+p
+  margin-top: 1em
 
 .board
   width: em(1084px)
